--- a/_posts/2023-10-10-milestone-1.md
+++ b/_posts/2023-10-10-milestone-1.md
@@ -3,22 +3,396 @@ layout: post
 title: Milestone 1
 ---
 
-## Acquisition des données
 
-### Tutoriel pour télécharger les données
+## 1. Acquisition des données
 
-voici le tuto : ...
+### Guide pour télécharger les données Play-by-Play de la LNH
 
-## Outil de débogage interactif 
+### Étape 1 : Importer les Modules Nécessaires
 
-Prenez une capture d'écran de l'outil et ajoutez-la à l’article de blog, accompagnée du code de l'outil et d'une brève description (1-2 phrases) de ce que fait votre outil.
+Avant de commencer, assurez-vous d'avoir installé les bibliothèques Python suivantes : os, requests, et json. Vous pouvez les installer en utilisant pip si ce n'est pas déjà fait.
 
-## Traitement des données
+{% highlight js %}
+import os
+import requests
+import json
+{% endhighlight %}
+
+### Étape 2 : Créer la Fonction de Téléchargement
+
+La fonction download_nhl_data a pour but de télécharger les données play-by-play des matchs de hockey de la LNH pour une saison donnée. Elle prend deux arguments en entrée : *season* et *file_path*.
+
+season : Cet argument représente l'année de la saison que vous souhaitez télécharger. Par exemple, si vous souhaitez télécharger les données pour la saison 2016-17, vous passerez 2016 comme valeur de cet argument, soit l'année de début de la saison concernée.
+
+
+file_path : Cet argument est le chemin du fichier JSON dans lequel vous souhaitez sauvegarder les données téléchargées. Si le fichier existe déjà, la fonction le lira pour éviter de télécharger à nouveau les données. Si le fichier n'existe pas, la fonction créera le fichier et y sauvegardera les données téléchargées.
+
+La fonction fonctionne comme suit :
+
+1. __Définition de l'URL de base__ : La fonction commence par définir l'URL de base de l'API de la LNH, qui est "https://statsapi.web.nhl.com/api/v1/game/". C'est l'URL à partir de laquelle les données de chaque match seront téléchargées.
+
+2. __Vérification de l'existence du fichier__ : La fonction vérifie si le fichier spécifié par file_path existe déjà sur le système. Si le fichier existe, cela signifie que les données ont déjà été téléchargées pour cette saison, donc la fonction les lit à partir du fichier JSON existant.
+
+3. __Téléchargement des données__ : Si le fichier n'existe pas, la fonction commence à télécharger les données. Elle utilise une boucle while pour itérer à travers tous les matchs de la saison en utilisant un game comme compteur. La variable game_type est définie à "02" pour représenter les matchs de la saison régulière. La boucle se poursuit tant que des matchs sont disponibles pour la saison.
+
+4. __Création du GAME_ID__ : Pour chaque itération de la boucle, la fonction crée un GAME_ID en utilisant l'année de la saison (season), le type de jeu (game_type), et le numéro de jeu (game). Le GAME_ID est formé en concaténant ces valeurs. 
+
+Exemple : 
+
+season : 2016
+
+game_type : "02" (pour les matchs de la saison régulière)
+
+game : 1 (pour le premier match de la saison)
+
+GAME_ID = "2016020001"
+
+5. __Construction de l'URL complète__ : En utilisant le GAME_ID, la fonction construit l'URL complète à partir de l'URL de base. Cela donne l'URL spécifique pour télécharger les données du match en question.
+
+Exemple : Pour le premier match de la saison 2016-2017, l'URL complet sera  : "https://statsapi.web.nhl.com/api/v1/game/2016020001/feed/live/"
+
+6. __Requête HTTP__ : La fonction utilise la bibliothèque requests pour effectuer une requête HTTP GET à l'URL spécifiée. Elle vérifie la réponse de la requête pour s'assurer que la demande a réussi (statut de réponse 200).
+
+7. __Traitement des données__ : Si la demande réussit, la réponse JSON est convertie en un objet Python. Les données du match sont alors ajoutées à une liste data.
+
+8. __Sauvegarde des données__ : À la fin de la boucle, la fonction sauvegarde toutes les données dans le fichier spécifié par file_path en utilisant json.dump.
+
+9. __Retour des données__ : Enfin, la fonction renvoie les données téléchargées, qu'elles proviennent du fichier existant ou du téléchargement en cours.
+
+
+#### Fonction : download_nhl_data(season, file_path()
+
+{% highlight js %}
+def download_nhl_data(season, file_path):
+    
+    // Étape 1 : Définir l'URL de base de l'API de la LNH
+    base_url = "https://statsapi.web.nhl.com/api/v1/game/"
+    
+    // Étape 2 : Vérifier si le fichier de données existe déjà
+    if os.path.exists(file_path):
+        // Si le fichier existe, chargez les données à partir du fichier
+        with open(file_path, 'r') as file:
+            data = json.load(file)
+    else: 
+        // Si le fichier n'existe pas, commencez le téléchargement
+        game_type = "02"  // Étape 3 : Saison régulière 
+        data = []  // Étape 4 : Stocker les données de tous les matchs
+        
+        is_game_number = True 
+        game = 1
+        // Étape 5 : Parcourir tous les matchs de la saison demandée
+        while is_game_number : 
+            // Étape 6 : Créer le GAME_ID en fonction de l'année cible, du type de jeu et du numéro de jeu
+            game_id = f"{season}{game_type}{str(game).zfill(4)}"
+            // Composer l'URL complet
+            url = f"{base_url}{game_id}/feed/live/"
+
+            // Étape 7 : Effectuer une requête HTTP pour télécharger les données
+            response = requests.get(url)
+
+            if response.status_code == 200:
+                // Si la requête réussit, traitez les données du match
+                game_data = response.json()
+                data.append(game_data)
+                game += 1
+            else:
+                // Si la requête échoue, affichez un message d'erreur et arrêtez le téléchargement
+                print(f"Erreur lors du téléchargement des données pour le match {game} de la saison {season}")
+                is_game_number = False 
+
+        // Étape 8 : Sauvegarder toutes les données dans le fichier spécifié
+        with open(file_path, 'w') as file:
+            json.dump(data, file)
+    
+    // Étape 9 : Retourner les données téléchargées
+    return data
+{% endhighlight %}
+
+#### Exemple d'utilisation 
+
+Vous avez l'intention de télécharger les données de la LNH, couvrant les saisons de 2016-2017 à 2020-2021.
+
+#### Étape 1  : Créez un dictionnaire pour stocker les données de plusieurs saisons
+
+Les clés de ce dictionnaire seront l'année de début de chaque saison.
+
+#### Étape 2 : Utilisez la Fonction download_nhl_data
+
+{% highlight js %}
+// Télécharger les données pour chaque saison et les stocker dans des fichiers JSON
+seasons_data["2016"] = download_nhl_data(2016, "nhl_data_2016.json")
+seasons_data["2017"] = download_nhl_data(2017, "nhl_data_2017.json")
+seasons_data["2018"] = download_nhl_data(2018, "nhl_data_2018.json")
+seasons_data["2019"] = download_nhl_data(2019, "nhl_data_2019.json")
+seasons_data["2020"] = download_nhl_data(2020, "nhl_data_2020.json")
+{% endhighlight %}
+
+#### Étape 3 : Accédez aux Données¶
+
+Exemple : Vous souhaitez accédez aux données du premier match de la saison 2016-2017
+
+{% highlight js %}
+seasons_data["2016"][0]
+{% endhighlight %}
+
+## 2. Outil de débogage interactif 
+
+Dans cette partie, on vous présente un ipywidget que nous avons implémenté. Il vous permet de parcourir tous les événements, pour chaque match d'une saison donnée, avec la possibilité de changer entre la saison régulière et les séries éliminatoires. 
+
+Voici une image de cet outil : 
+
+//insérer image
+
+Le code pour générer ceci est le suivant : 
+
+{% highlight js %}
+import matplotlib.pyplot as plt
+import matplotlib.image 
+import ipywidgets as widgets
+from IPython.display import display, clear_output
+from tabulate import tabulate
+
+// Création d'un menu déroulant (dropdown) avec les clés de seasons_data
+seasons_dropdown = widgets.Dropdown(
+    options=list(seasons_data.keys()),  // Utilisez les clés du dictionnaire comme options
+    description='Saison:',
+    disabled=False,
+)
+
+// Création d'un slider pour sélectionner le jeu
+game_id_slider = widgets.IntSlider(
+    min=1,
+    max=len(seasons_data[seasons_dropdown.value]),  
+    step=1,
+    description='Game ID:',
+    disabled=False,
+)
+
+// Création d'un slider pour l'ID de l'événement
+event_id_slider = widgets.IntSlider(
+    min=1,
+    max=1, 
+    step=1,
+    description='i:',
+    disabled=False,
+)
+
+// Créez une sortie pour afficher les données
+output = widgets.Output()
+
+// Mise à jour de l'affichage lorsque l'utilisateur modifie les valeurs du dropdown ou des sliders
+def update_output(selected_season,season_data, game_id_slider):
+    with output:
+        clear_output(wait=True)  # Effacez la sortie précédente
+        selected_game_id = game_id_slider.value
+        abbr_team_away = season_data[selected_game_id].get("gameData")["teams"]["away"]["abbreviation"]
+        abbr_team_home = season_data[selected_game_id].get("gameData")["teams"]["home"]["abbreviation"]
+        game_datetime = season_data[selected_game_id].get("gameData")["datetime"]["dateTime"]
+        // Récupérer la liste des événements
+        events_list = season_data[selected_game_id].get("liveData")["plays"]["allPlays"]
+        // Récupérer le dernier eventIdx qui correspond au dernier événement du match
+        last_event_idx = events_list[-1]["about"]["eventIdx"]
+        event_id_slider.max = int(last_event_idx)
+        coordo_event = events_list[event_id_slider.value]["coordinates"]
+        event_desc = events_list[event_id_slider.value]["result"]["description"]
+        
+        // Créer une liste de données pour le tableau
+        table_data = []
+        // 1ère ligne : Intitulés des colonnes
+        table_data.append(["", "Home", "Away"])
+        // 2ème ligne : Teams
+        home_team = abbr_team_home
+        away_team = abbr_team_away
+        table_data.append(["Teams :", home_team, away_team])
+        // 3ème ligne : Goals
+        // Se met à jour en fonction des événement (i) 
+        home_goals = events_list[event_id_slider.value]["about"]["goals"]["home"]
+        away_goals = events_list[event_id_slider.value-1]["about"]["goals"]["away"]
+        table_data.append(["Goals :", home_goals, away_goals])
+        // 4ème ligne : SoG (Shots on Goal)
+        // Est le même pour chaque game id 
+        home_sog = season_data[selected_game_id].get("liveData")["linescore"]["teams"]["home"]["shotsOnGoal"]
+        away_sog = season_data[selected_game_id].get("liveData")["linescore"]["teams"]["away"]["shotsOnGoal"]
+        table_data.append(["SoG :", home_sog, away_sog])
+        // 5ème ligne : SO Goals (Buts lors des tirs de barrage)
+        // Est le même pour chaque game id 
+        home_so_goals = season_data[selected_game_id].get("liveData")["linescore"]["shootoutInfo"]["home"]["scores"]
+        away_so_goals = season_data[selected_game_id].get("liveData")["linescore"]["shootoutInfo"]["away"]["scores"]
+        periodTime = events_list[event_id_slider.value]["about"]["periodTime"]
+        period = events_list[event_id_slider.value]["about"]["period"]
+        table_data.append(["SO Goals :", home_so_goals, away_so_goals])
+        // 6ème ligne : SO Attempts (Tentatives lors des tirs de barrage)
+        // Est le même pour chaque game id 
+        home_so_attempts = season_data[selected_game_id].get("liveData")["linescore"]["shootoutInfo"]["away"]["attempts"]
+        away_so_attempts = season_data[selected_game_id].get("liveData")["linescore"]["shootoutInfo"]["away"]["attempts"]
+        table_data.append(["SO Attempts :", home_so_attempts, away_so_attempts])
+        // Afficher le tableau
+        table = tabulate(table_data, headers="firstrow")
+        
+
+        // Création d'une figure Matplotlib
+        fig, ax = plt.subplots(figsize=(10, 5))
+        // Chargement de l'image de fond
+        img = matplotlib.image.imread('./figures/nhl_rink.png') 
+        ax.imshow(img, extent=[-100, 100, -42.5, 42.5], alpha=1)  // Affichez l'image avec les limites d'axes
+        // Définition des plages d'axes
+        plt.xlim(-100, 100)
+        plt.ylim(-42.5, 42.5)
+        // Ajout des étiquettes pour les axes
+        plt.xlabel('feet')
+        plt.ylabel('feet')
+        // Ajout titre
+        title_graph = str(f"{abbr_team_away}                                               {abbr_team_home}")
+        plt.title(title_graph)
+        // Ajout d'un point bleu aux coordonnées spécifiées
+        if coordo_event != {} : 
+            x= coordo_event['x']
+            y= coordo_event['y'] 
+            plt.scatter(x, y, c='blue', s=100) 
+        // Affichage
+        print(f"Date : {game_datetime}")
+        print(f"Saison sélectionnée : {selected_season}")
+        print(f"Game ID : {selected_game_id} ; {abbr_team_home} (home) vs {abbr_team_away} (away)\n")
+        print(table)
+        print(f"\n\nDétail de l'événement : {event_desc}")
+        print(f"Temps de jeu : {periodTime} P-{period}")
+        plt.show()
+        info = seasons_data[str(seasons_dropdown.value)][game_id_slider.value].get("liveData")["plays"]["allPlays"][event_id_slider.value]
+        print(info)
+
+
+// Fonction pour mettre à jour la sortie lorsque la saison est modifiée
+def season_update_output():
+    selected_season = str(seasons_dropdown.value)
+    season_data = seasons_data[selected_season]
+    game_id_slider.max = len(season_data)
+    game_id_slider.value = 1
+    update_output(selected_season,season_data, game_id_slider)
+        
+// Fonction pour mettre à jour la sortie lorsque le game id est modifiée
+def game_update_output():
+    selected_season = str(seasons_dropdown.value)
+    season_data = seasons_data[selected_season]
+    game_id_slider.max = len(season_data) 
+    update_output(selected_season,season_data, game_id_slider)
+
+// Lorsque la valeur du dropdown change, appel de la fonction season_update_output
+seasons_dropdown.observe(lambda change: season_update_output(), names='value')
+
+// Lorsque la valeur du slider game id change, appel de la fonction game_update_output
+game_id_slider.observe(lambda change: game_update_output(), names='value')
+
+// Lorsque la valeur du slider event (i) change, appel de la fonction game_update_output
+// Il est inutile de créer en event_update_output
+event_id_slider.observe(lambda change: game_update_output(), names='value')
+
+// Affichez le menu déroulant, le slider et la sortie
+display(seasons_dropdown, game_id_slider, event_id_slider, output)
+
+// Appelez manuellement la fonction update_output pour afficher la sortie dès le départ
+season_update_output()
+
+{% endhighlight %}
+
+
+## 3. Traitement des données
+
+La partie de traitement des données est essentielle pour un projet en sciences des données. En effet, il est préférable d'avoir un jeu de données contenant toutes les informations utiles. Cela permet de gagner du temps pour la suite.
+
+### 3.1
+
+Voici un petit extrait du dataframe final que nous utiliserons pour la suite du projet.
+
+{% include image1.html url="../public/q1.png" description = "Extrait du dataframe final"%}
+
+### 3.2
+
+Le champ "force" n'existe que pour les buts et pas pour les tirs et en plus n'inclut pas la force réelle des joueurs sur la glace. Pour faire face à ce problème, nous avont eu l'idée suivante : en combinant les event 'penalty' et leurs 'penalty time' et 'period time', on peut savoir quel intervalle de temps contient un débalancement de joueur et donc on peut rajouter la force au 'event' de cet intervale de temps.
+
+### 3.3
+
+Nous avons pensé qu'il aurait été intéressant d'ajouter des caractéristiques supplémentaires en partant des données disponibles. D'abord, la quantité de temps de jeu de chaque tireur serait intéressante à prendre en compte (par exemple, un tireur ayant fait que un but, mais en très peu de temps de jeu n'est pas un mauvais joueur, au contraire). De plus, la quantité tirs et la quantité de but de chaque tireur permettraient aussi de voir à quel point les joueurs tentent de tirer pendant les matchs. Enfin, nous avons aussi pensé à regarder le nombre de coup bloqué du gardien, ainsi que son ratio de tir bloqué/but (les statistiques du gardiens sont très importantes car son rôle peut être crucial lors des matchs). 
+
+## 4. Visualisation simple
 
 ### Question 1
+Ici, nous allons analyser les types de tirs et leur efficacité. Pour cela, nous allons comparer les types de tirs de toutes les équipes lors de la saison 2018 à l'aide d'un histogramme. Ce type de graphique est adapté pour compter le nombre d'occurence d'un événement, soit les tirs et les buts dans notre cas. 
+Remarque : nous ne nous intéresserons qu'aux types de tirs les plus courants, c'est-à-dire : tir du poignet, slapshot, snap shot et revers. 
 
+{% include image2.html url="../public/visu_simple_q1.png" description = "Tirs et buts"%}
 
+Ce graphique montre clairement que le tir le plus commun est le Wrist shot. Il y en a eu presque 50000 contre moins de 15000 pour les autres types de tir. Notre première hypothèse et celle qui nous semble la plus probable est qu'il s'agit d'un tir simple à réaliser. 
 
-### Question 2
+Par ailleurs, il s'agit aussi du type de tir avec le plus grand nombre de but. On aurait pu alors pensé qu'il s'agit du tir le plus dangereux or en comparant les taux de réussite avec les autres tirs, on se rend compte que ce n'est pas le cas. C'est d'ailleurs le tir le moins utilisé, le backhand, qui a le meilleur taux de réussite (0.11 contre 0.09 pour le tir précédent). Cela va dans le sens de notre précédente hypothèse puisque ce tir, compliqué à mettre en oeuvre, obtient les meilleures chances de marquer un point.
 
-En combinant les event 'penalty' et leurs 'penalty time' et 'period time', on peut savoir quel intervale de temps contient un débalancement de joueur et donc on peut rajouter la force au 'event' de cet intervale de temps
+### Question 2 : Analyse de la Relation entre la Distance et la Probabilité de Marquer un But au Hockey
+
+Nous avons effectué une analyse approfondie pour comprendre la relation entre la distance à laquelle un tir est effectué et la probabilité que ce tir se transforme en un but. Pour ce faire, nous avons examiné les saisons de 2018-19 à 2020-21 et produit des graphiques représentant ces données.
+Les graphiques ci-dessous illustrent clairement cette relation. Une tendance générale se dégage : en règle générale, la probabilité de marquer un but augmente avec la distance du tir par rapport au filet. Cependant, il est essentiel de noter que cette tendance ne suit pas une trajectoire linéaire et que des variations significatives sont observées d'une saison à l'autre. 
+
+{% include visu_simple_q2.html url="../public/visu_simple_q2.png" description = "Relation entre la Distance et la Probabilité de Marquer un But
+"%}
+
+#### Insight 1 : Saison 2018-19
+Lors de la saison 2018-19, la probabilité de marquer un but est la plus élevée entre 6 et 8 pieds du filet, atteignant un maximum de 0.5. Cette saison présente une caractéristique unique où la probabilité chute progressivement après 8 pieds, puis suit la tendance générale observée dans les autres saisons.
+
+#### Insight 2 : Saison 2019-20
+Au cours de la saison 2019-20, nous avons observé une augmentation progressive de la probabilité de marquer un but jusqu'à environ 0.16, avant que la probabilité ne diminue pour les tirs effectués à plus de 42 pieds.
+
+#### Insight 3 : Saison 2020-21
+La saison 2020-21 suit une tendance similaire à la saison précédente, avec une augmentation progressive de la probabilité de but jusqu'à environ 0.16, suivie d'une diminution pour les tirs à plus de 42 pieds.
+
+#### Conclusions
+En résumé, la probabilité de marquer un but est généralement moins élevée pour les tirs effectués à proximité du filet. Cependant, des variations significatives sont observées d'une saison à l'autre. La saison 2018-19 se distingue par un maximum inhabituellement élevé pour les tirs à une distance de 6 à 8 pieds. Pour toutes les saisons, la probabilité de marquer un but diminue progressivement après avoir atteint son sommet, avec une chute significative pour les tirs à plus de 46 pieds. Ces variations peuvent être le résultat de multiples facteurs, y compris les compétences des joueurs, les tactiques d'équipe et les performances des gardiens de but. 
+La visualisation des données, sous forme de courbe, est un moyen puissant d'illustrer ces tendances au fil des saisons, et elle offre des informations utiles aux entraîneurs, aux joueurs et aux analystes pour prendre des décisions informées.
+Analyse premier graphe
+
+### Question 3
+
+Nous allons enfin montrer le pourcentage de buts en fonction à la fois de la distance par rapport au filet et de la catégorie de types de tirs.
+
+{% include visu_simple_q3.html url="../public/visu_simple_q3.png" description = "Pourcentage de buts en fonction à la fois de la distance par rapport au filet et de la catégorie de types de tirs"%}
+
+Les slap shots présentent un comportement intéressant. La courbe montre que la probabilité de marquer un but est la plus élevée à une distance entre 14 et 16 pieds, atteignant un pourcentage maximal, puis elle diminue considérablement à une distance entre 16 et 18 pieds. Entre 22 et 40 pieds, le pourcentage augmente progressivement avant de diminuer au-delà de 46 pieds.
+
+En ce qui concerne les wrist shots, la courbe commence avec un pic autour de 11% pour les distances entre 12 et 14 pieds. Ensuite, elle augmente progressivement pour atteindre un maximum de 15% pour les distances entre 42 et 44 pieds, avant de diminuer progressivement au-delà de cette distance.
+
+Les snap shots se comportent différemment, avec un pourcentage de but restant à 0 pour les distances de 0 à 22 pieds. Ensuite, la probabilité augmente progressivement pour atteindre un maximum de 18% entre 44 et 46 pieds, puis diminue au-delà de cette distance, suivant la tendance générale.
+
+Pour les backhand shots, le pourcentage de but reste inférieur à 5% jusqu'à 38 pieds, puis augmente considérablement pour atteindre 21% pour les distances entre 42 et 44 pieds, avant de diminuer de manière similaire aux autres types de tirs au-delà de cette distance.
+
+Ces observations mettent en évidence les distances à partir desquelles chaque type de tir devient plus efficace pour marquer un but. Les snap shots semblent être les plus efficaces à proximité, tandis que les wrist shots atteignent leur pic de rendement à une distance intermédiaire. Les slap shots et les backhand shots sont plus efficaces à plus longue distance, avec des variations significatives de l'efficacité en fonction de la distance.
+
+## 5. Visualisation avancée
+
+Les graphs sont situés juste après les questions car ils prennent beaucoup de place.
+
+### 5.1 
+
+Un problème avec plotly nous bloque. Nous avons donc incorporé nos propres graphiques pour soutenir nos prochaines questions. Leurs productions somt incluses dans le notebook pour prouver l'authenticité.
+
+### 5.2 
+
+Les graphiques permettent de comparer les habitudes de tirs d'une équipe par rapport au reste de la ligue. Les analyser peut permettre d'identifier des tendances par rapport au joueur de LNH moyen.
+
+### 5.3 
+
+En regardant la carte des Avalanches en 2016, on peut identifier qu'ils envoient une grande majorité de leurs tirs à proximité du filet et un peu de tirs de distance sur les côtés. Le graphique de la même équipe en 2020 est assez similaire. Pourtant le classement des Avalanches en 2016 n'était pas aussi démarquant.
+
+### 5.4
+
+Comparant les 6 cartes des 2 équipes, Les lightnings ont un style beaucoup plus varié. Leurs graphs d'année en année sont très variables comparémment aux graphs des Sabres qui sont similaires d'année en année. Ces images sont pourtant loin d'être suffisante pour tout comprendre sur les succès ou problèmes d'une équipe. Que les buts et les tirs bloqués soient tous deux représentés sans distinction peut causer des problèmes d'interprétation. L'évolution des tirs dans un match selon les positions que le gardien arrive à intercepter ou non, donnerait un autre oeil sur la valeur de l'équipe.
+
+{% include Avalanche2016.html %}
+
+{% include Avalanche2020.html %}
+
+{% include Lightning2018.html %}
+
+{% include Lightning2019.html %}
+
+{% include Lightning2020.html %}
+
+{% include Sabres2019.html %}
+
+{% include Sabres2020.html %}
